[gd_scene load_steps=20 format=2]

[ext_resource path="res://Cenas/Opcoes/opcao.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg.png" type="Texture" id=2]
[ext_resource path="res://SuperBg.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elementos_Jogo/opcao-01.png" type="Texture" id=4]
[ext_resource path="res://Elementos_Jogo/slider_high.png" type="Texture" id=5]
[ext_resource path="res://Elementos_Jogo/slider_normal1.png" type="Texture" id=6]
[ext_resource path="res://Elementos_Jogo/checked.png" type="Texture" id=7]
[ext_resource path="res://Elementos_Jogo/uncheck.png" type="Texture" id=8]
[ext_resource path="res://Fonts/RobotoSlab-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Elementos_Jogo/seleção de tela down.png" type="Texture" id=10]
[ext_resource path="res://Elementos_Jogo/seleção de tela_button selection.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.996094, 0.996094, 0.996094, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width" ]

[sub_resource type="DynamicFont" id=2]

size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 14
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="InputEventKey" id=7]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = false
scancode = 16777217
unicode = 0
echo = false

[sub_resource type="ShortCut" id=8]

shortcut = SubResource( 7 )

[node name="opcao" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="SuperBg" parent="." index="1" instance=ExtResource( 3 )]

[node name="fundoOp" type="Sprite" parent="." index="2"]

texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="FechaSelecao" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Efeitos" type="HSlider" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 353.0
margin_right = 803.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 1 )
min_value = -20.0
max_value = 24.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="Ambientacao" type="HSlider" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 509.0
margin_top = 449.0
margin_right = 804.0
margin_bottom = 465.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 1 )
min_value = -20.0
max_value = 24.0
step = 1.0
page = 0.0
value = -8.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="Musica" type="HSlider" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 547.0
margin_right = 803.0
margin_bottom = 563.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 1 )
min_value = -20.0
max_value = 24.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="Full_Screen" type="CheckBox" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 667.0
margin_top = 160.0
margin_right = 766.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Tela Cheia"
flat = false
align = 0
_sections_unfolded = [ "Theme", "custom_fonts", "custom_icons" ]

[node name="janela" type="CheckBox" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 498.0
margin_top = 160.0
margin_right = 618.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Janela"
flat = false
align = 0
_sections_unfolded = [ "Theme", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="Control tamanho da tela" type="Control" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 499.0
margin_top = 208.0
margin_right = 783.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="LabelTamanho" type="Label" parent="Control tamanho da tela" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Dimensão de Tela"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="Selecoes" type="Control" parent="Control tamanho da tela" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 41.0
margin_right = 108.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Sprite" type="Sprite" parent="Control tamanho da tela/Selecoes" index="0"]

texture = ExtResource( 10 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="853 X 480" type="CheckBox" parent="Control tamanho da tela/Selecoes" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = -2.0
margin_right = 88.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "853 X 480"
flat = false
align = 0
_sections_unfolded = [ "Rect", "Theme", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="1000 X 562" type="CheckBox" parent="Control tamanho da tela/Selecoes" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 23.0
margin_right = 88.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "1000 X 562"
flat = false
align = 0
_sections_unfolded = [ "Rect", "Theme", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="1155 X 650" type="CheckBox" parent="Control tamanho da tela/Selecoes" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 46.0
margin_right = 88.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "1155 X 650"
flat = false
align = 0
_sections_unfolded = [ "Rect", "Theme", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="1280 X 720" type="CheckBox" parent="Control tamanho da tela/Selecoes" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 69.0
margin_right = 88.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "1280 X 720"
flat = false
align = 0
_sections_unfolded = [ "Rect", "Theme", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="1920 X 1080" type="CheckBox" parent="Control tamanho da tela/Selecoes" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 91.0
margin_right = 88.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "1920 X 1080"
flat = false
align = 0
_sections_unfolded = [ "Rect", "Theme", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="Tamanho" type="TextureButton" parent="Control tamanho da tela" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 19.0
margin_right = 107.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]

[node name="Labelnumero" type="Label" parent="Control tamanho da tela" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 20.0
margin_right = 88.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "1280 x 720"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Voltar" type="Button" parent="." index="10"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 257.0
margin_right = 84.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Voltar para o Menu Principal"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 8 )
group = null
text = "Voltar"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Rect", "custom_fonts" ]

[node name="TimerSelecao" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[connection signal="pressed" from="FechaSelecao" to="." method="_on_FechaSelecao_pressed"]

[connection signal="value_changed" from="Efeitos" to="." method="_on_Efeitos_value_changed"]

[connection signal="value_changed" from="Ambientacao" to="." method="_on_Ambientacao_value_changed"]

[connection signal="value_changed" from="Musica" to="." method="_on_Musica_value_changed"]

[connection signal="pressed" from="Full_Screen" to="." method="_on_Full_Screen_pressed"]

[connection signal="pressed" from="janela" to="." method="_on_janela_pressed"]

[connection signal="pressed" from="Control tamanho da tela/Selecoes/853 X 480" to="." method="_on_853_X_480_pressed"]

[connection signal="pressed" from="Control tamanho da tela/Selecoes/1000 X 562" to="." method="_on_1000_X_562_pressed"]

[connection signal="pressed" from="Control tamanho da tela/Selecoes/1155 X 650" to="." method="_on_1155_X_650_pressed"]

[connection signal="pressed" from="Control tamanho da tela/Selecoes/1280 X 720" to="." method="_on_1280_X_720_pressed"]

[connection signal="pressed" from="Control tamanho da tela/Selecoes/1920 X 1080" to="." method="_on_1920_X_1080_pressed"]

[connection signal="pressed" from="Control tamanho da tela/Tamanho" to="." method="_on_Tamanho_pressed"]

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]

[connection signal="timeout" from="TimerSelecao" to="." method="_on_TimerSelecao_timeout"]


